assets/css/style.css
* {
    background-color: rgb(190, 206, 226);
}

/* NAV STYLES */

nav {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    align-items: stretch;
    padding: 20px;
    font-size: 3vw;
}

#highscore {
    color: blueviolet;
    text-shadow:1px 1px rgba(0, 0, 0, 0.459);
}

#highscore:hover {
    color:navy;
}
/* end */

/* MAIN STYLES */

h2 {
    font-size: 5vw;
}

p, label {
    font-size: 3vw;
}

.quiz-container {
    width: 70%;
    margin: auto;
    text-align: center;
}

.quiz-container li {
    text-align: left;
    width: 150px;
    margin: 20px;
    padding: 10px;
    color: white;
    background-color:navy;
    border-radius: 10px;
    list-style-type: none;
}

.quiz-container li:hover {
    background-color: teal;
    color: navy;
    list-style-type: none;
}

#scoreList {
    text-align: left;
    width: 260px;
    margin: 20px;
    padding: 10px;
    color: black;
    background-color: rgba(128, 128, 128, 0.301);
    border-radius: 0px;
    list-style-type: decimal;
}

#scoreList:hover {
    background-color: rgba(128, 128, 128, 0.801);
}

.quiz-container button {
    margin: 10px;
    padding: 5px;
    color: white;
    background-color: navy;
    border-radius: 10px;
    border-style: none;
    font-size: 2.5vw;
}

.quiz-container button:hover {
    background-color: teal;
}

h3 {
    color: gray;
    text-align: left;
    font-size: 4vw;
}

/* end  */

/* MEDIA QUERY FOR TABLETS AND SMALLER */
@media screen and (max-width: 768px) {

    /* NO HOVER CHANGES */
    #highscore:hover {
        color: blueviolet;
    }

    #scoreList:hover {
        background-color: rgba(128, 128, 128, 0.301);
    }

    .quiz-container li:hover {
        background-color:navy;
    }

    .quiz-container button:hover {
        background-color: navy;
    }
}

